--- a/style.css
+++ b/style.css
@@ -645,7 +645,7 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .subscribe .quote {
